--- a/schedule.html
+++ b/schedule.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <title> MIT Bitcoin Expo  </title>
+  <title> MIT Bitcoin Expo - Schedule </title>
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Favicons -->
@@ -15,7 +15,7 @@
 
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/swiper/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="assets/css/main.css?v=94" />
+  <link rel="stylesheet" href="assets/css/main.css?v=93" />
 
 </head>
 
@@ -72,7 +72,7 @@
 
 
               <li class="nav-item">
-                <a href="schedule.html"> Schedule </a>
+                <a href="schedule.html" class="active"> Schedule </a>
               </li>
 
 
@@ -119,167 +119,23 @@
   <!-- ======= herder end ======= -->
 
 
-  <section class="hero-area">
-    <img src="assets/img/hero/map.png" class="map" alt="map">
+
+  <section class="page-header">
     <div class="container">
-      <div class="hero-txt">
-        <h6> The 11th Annual </h6>
-        <h1>
-          <img src="assets/img/hero/mit.png" alt="mit">
-          <span> Bitcoin Expo </span>
-        </h1>
-        <p>
-          April 22 - April 23, 2024
-        </p>
+      <div class="page-title">
+        <h1> Schedule </h1>
+      </div><!-- /.page-title -->
 
+      <div class="spr-btns mt-lg-5 mt-4">
+       <h5 class="cming">Coming Soon...</h5>
+      </div><!-- /.spr-btns -->
 
-        <div class="hero-btns">
-          <a href="#" class="btn-solid">
-            <span> Buy Tickets </span>
-            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M1.79565 7.94437H14.7587M14.7587 7.94437L8.27711 14.4259M14.7587 7.94437L8.27711 1.46289"
-                stroke="#" stroke-width="1.66667" stroke-linecap="square" />
-            </svg>
-          </a>
-
-          <a href="#" class="btn-outline">
-            <span> Learn More </span>
-            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M1.79565 7.94437H14.7587M14.7587 7.94437L8.27711 14.4259M14.7587 7.94437L8.27711 1.46289"
-                stroke="black" stroke-width="1.66667" stroke-linecap="square" />
-            </svg>
-          </a>
-
-        </div><!-- /.hero-btns -->
-        
-      </div><!-- /.hero-txt -->
     </div><!-- /.container -->
-  </section><!-- /.hero-area -->
-
-
-
-
-  <section class="expo">
-    <div class="container">
-      <div class="sec-t">
-        <h2>
-          Expo 2024
-        </h2>
-        <p>
-          Scaling Up: Bitcoin’s lead in a World Dominated by Regulation, Globalization, and Big Tech
-        </p>
-      </div><!-- /.sec-t -->
-      <p>
-        Welcome to the 11th Annual MIT Bitcoin Expo, celebrating our decade-long tradition as the longest-running
-        collegiate conference focused on blockchain. This year, we spotlight Bitcoin's evolution and potential amidst
-        globalization, regulation, and big tech. Attendees will delve into key topics like ETF approvals, regulatory
-        clarity, and consumer applications, essential for Bitcoin's mainstream adoption. Our technical sessions will
-        feature innovations such as the Taproot upgrade and Layer 2 scalability, further enhancing Bitcoin's
-        functionality. Embracing a variety of projects and ideas, from AI to Web3, this year's expo offers a
-        comprehensive view of Bitcoin's significant role in our rapidly evolving digital era. We can’t wait for you to
-        join us!
-      </p>
-    </div><!-- /.container -->
-  </section><!-- /.expo -->
-
+  </section><!-- /.page-header -->
 
   <section class="speakers">
-    <div class="container">
-      <div class="sec-t">
-        <h2> Speakers </h2>
-      </div><!-- /.sec-t -->
-
-      <h5>Coming Soon...</h5>
-
-
-    </div><!-- /.container -->
+   
   </section><!-- /.speakers -->
-
-
-  <section class="theme">
-    <div class="container">
-      <div class="sec-t">
-        <h2>
-          Core Themes
-        </h2>
-      </div><!-- /.sec-t -->
-
-      <div class="row gy-4">
-        <div class="col-12">
-          <div class="gc-single">
-            <div class="gc-wrapper">
-              <h4> Bitcoin Applications </h4>
-              <p>
-                ETF approval, regulatory clarity, and consumer use cases.
-              </p>
-
-            </div><!-- /.gc-wrapper -->
-          </div><!-- /.gc-single -->
-        </div><!-- /.col-12 -->
-        <div class="col-12">
-          <div class="gc-single">
-            <div class="gc-wrapper">
-              <h4> Technical Improvements </h4>
-              <p>
-                Taproot, Layer 2 Scalability, and more.
-              </p>
-
-            </div><!-- /.gc-wrapper -->
-          </div><!-- /.gc-single -->
-        </div><!-- /.col-12 -->
-        <div class="col-12">
-          <div class="gc-single">
-            <div class="gc-wrapper">
-              <h4> New Projects and Perspectives </h4>
-              <p>
-                AI, Identity, Web3, and more.
-              </p>
-
-            </div><!-- /.gc-wrapper -->
-          </div><!-- /.gc-single -->
-
-        </div><!-- /.col-12 -->
-      </div><!-- /.row -->
-
-
-
-
-    </div><!-- /.container -->
-  </section><!-- /.theme -->
-
-
-  <section class="expo-h">
-    <div class="expo-son">
-      <div class="container">
-        <div class="row justify-content-between">
-          <div class="col-lg-5">
-            <div class="sec-t">
-              <h2>
-                Expo <br> Hackathon
-              </h2>
-            </div><!-- /.sec-t -->
-          </div><!-- /.col-lg-4 -->
-          <div class="col-lg-5">
-            <div class="ex-tx">
-              <p>
-                Come learn, compete and work with teams from all over the world in this Blockchain agnostic competition.
-                We welcome both beginners and advanced developers from university and beyond.
-              </p>
-              <a class="btn-solid" href="https://mitbitcoin.devpost.com/" target="_blank">
-                <span> Learn More </span>
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M1.79565 7.94437H14.7587M14.7587 7.94437L8.27711 14.4259M14.7587 7.94437L8.27711 1.46289"
-                    stroke="#" stroke-width="1.66667" stroke-linecap="square"></path>
-                </svg>
-              </a>
-            </div><!-- /.ex-tx -->
-          </div><!-- /.col-lg-4 -->
-        </div><!-- /.row -->
-      </div><!-- /.container -->
-    </div><!-- /.expo-son -->
-  </section><!-- /.expo-h -->
-
-
 
 
 
@@ -298,21 +154,21 @@
                 collegiate conference about blockchain.
               </p>
             </div><!-- /.footer-logo -->
-           
+
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-5">
             <ul class="footer-links">
               <li>
-                <a href="#"> About </a>
+                <a href="about.html"> About </a>
               </li>
               <li>
-                <a href="#"> Team </a>
+                <a href="team.html"> Team </a>
               </li>
               <li>
-                <a href="#"> Speakers </a>
+                <a href="speakers.html"> Speakers </a>
               </li>
               <li>
-                <a href="#"> sponsors </a>
+                <a href="sponsors.html"> sponsors </a>
               </li>
               <li>
                 <a href="https://www.mitbitcoinexpo.org/prior-expos"> prior expos </a>
