--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
               </li>
 
               <li class="nav-item">
-                <a href="https://www.eventbrite.com/e/mit-bitcoin-expo-2024-tickets-808745157537?aff=oddtdtcreator" target="_blank" class="apply-btn">
+                <a href="https://mit.zoom.us/j/91681427158" target="_blank" class="apply-btn">
                   <span> Buy Tickets</span>
                   <img src="assets/img/logo/arrow.svg" alt=arrow"">
                 </a>
@@ -126,7 +126,7 @@
         <h1> Scaling Up </h1>
         <p>
           THE 11th MIT BITCOIN EXPO <br>
-          APRIL 20-21, 2024
+          APRIL 22 - 23, 2024
         </p>
       </div><!-- /.page-title -->
     </div><!-- /.container -->
@@ -135,20 +135,62 @@
 
   <section class="about-txt">
     <div class="container">
-      <p>Welcome to the 11th Annual MIT Bitcoin Expo, a hallmark event celebrating over a decade as the foremost collegiate conference dedicated to blockchain technology. This year, we proudly present our theme: "Scaling Up: Bitcoin’s Lead in a World Dominated by Regulation, Globalization, and Big Tech".</p>
-      
-      <p>In an era where the financial landscape is increasingly influenced by regulatory frameworks, global economic shifts, and the pervasive reach of major technology corporations, Bitcoin stands at a pivotal juncture. Our conference delves deep into how Bitcoin continues to evolve and assert its relevance and potential in this complex environment.</p>
-
-      <p>Key topics on our agenda include the recent milestone of Bitcoin Exchange-Traded Fund (ETF) approvals, offering a new level of accessibility and legitimacy to Bitcoin investments. We'll explore how regulatory clarity is shaping the future of cryptocurrencies and their integration into mainstream finance. Our technical sessions are set to highlight groundbreaking advancements in Bitcoin’s infrastructure. Special focus will be given to the Taproot upgrade, enhancing Bitcoin's privacy and efficiency, and Layer 2 solutions, crucial for scaling Bitcoin's transaction capacity to meet global demand. Moreover, this year's expo will not shy away from the cutting-edge. We're excited to showcase innovations in zero-knowledge (zk) proofs, a revolutionary technology enabling enhanced privacy and security in blockchain transactions. These discussions aim to provide a comprehensive understanding of the current and potential applications of zk in the blockchain space. In keeping with our tradition of fostering a holistic view of the blockchain ecosystem, we'll also explore intersections with other burgeoning technologies like AI and Web3, underscoring Bitcoin's significant role in our rapidly evolving digital era.</p>
-
-      <p>The MIT Bitcoin Expo is more than a conference; it's a community and a platform for exchange, learning, and innovation. Whether you're a seasoned expert in the field or newly intrigued by the potential of blockchain, we invite you to join us in this enlightening journey. Mark your calendars for an enlightening weekend of discussion, discovery, and networking. We can’t wait to welcome you to the 11th Annual MIT Bitcoin Expo, where we unite to celebrate and scrutinize the ascent of Bitcoin in a world brimming with regulatory, global, and technological challenges and opportunities.</p>
-
-      <p>See you there!</p>
+      <p>
+        The MIT Bitcoin Expo is back, and this year we're celebrating our 10-year anniversary! Starting as a small club
+        of MIT students interested in a technology that wasn't covered in classes, we've grown to become the
+        longest-running university student-led crypto conference in the world.
+      </p>
+      <p>
+        Our conference prides itself on being a technical event that features protocol-level talks and panel discussions
+        from regulators, scientists, developers, researchers, and others who are passionate about furthering our
+        understanding of what's possible in crypto now, and what may be possible in the future.
+      </p>
+      <p>
+        If you've attended our conference before, you know what an amazing weekend it is, and we hope you'll join us
+        again this year. If you're new to the event, we invite you to visit MIT on April 22-23 and experience the
+        innovation and excitement that our community has to offer.
+      </p>
+      <p>
+        This past year has been a tumultuous one for the crypto industry, and we've learned a lot about what's needed
+        for Bitcoin, blockchain, and web3 to not only survive, but to thrive. We've seen many failures in the space, but
+        we've also seen some major wins, such as Bitcoin's continued resiliency, Ethereum's move to proof of stake, and
+        advancements in ZK technology.
+      </p>
+      <p>
+        The influx of talented individuals joining crypto and web3 in recent years has us excited to invite some of them
+        to share their work and findings at the Expo. The conference is known for its technical talks, which cover a
+        wide range of topics in the crypto space.  This year's speakers will share their research and theories on a
+        variety of topics, including proof of work, regulation, institutional adoption, ZK rollups, starks, DID,
+        Lightning network, the effects of AI on crypto and web3, and covenants for Bitcoin.
+      </p>
+      <p>
+        In addition to our panel discussions and talks, the MIT Bitcoin Expo also hosts a hybrid hackathon. The
+        hackathon has historically produced amazing crypto projects that have even led to some of them getting funded to
+        continue development after the event. The hackathon is a 30-hour competition where people looking to get into
+        web 3 and veteran hackers in the space compete to put projects together. Submissions come from all over the
+        world, and many hackers and teams even come to compete in person. The hackathon provides an opportunity for
+        hackers to showcase their creativity and technical skills, and offers the potential for new and innovative ideas
+        to emerge. We're excited to see what this year's hackathon will bring and we encourage all hackers to
+        participate, whether in person or remotely. 
+      </p>
+      <p>
+        But the MIT Bitcoin Expo isn't just about the talks and events. It's also about the connections you make and the
+        ideas you exchange and the after-party Our conference features bustling university spaces where you can explore
+        new products and services, chat with company representatives, and discover exciting new startups and research
+        all related to crypto.  On Saturday night, all attendees are invited to our annual after-party. This year we
+        will be hosting you at Big Night Live in Boston where all speakers and attendees will be able to hang out and
+        party the night away.
+      </p>
+      <p>
+        So join us as we celebrate 10 years of crypto innovation and explore the latest trends and developments in the
+        industry. Register now for the MIT Bitcoin Expo 2023 on April 22-23, and be a part of this amazing event!
+      </p>
 
 
      <div class="pt-lg-5 pt-md-3 pt-3 mb-3">
       <p>
-        MIT Bitcoin Expo Committee 2024
+        Hannah and Manish <br>
+        Co-Presidents of MIT Bitcoin Expo 2023
       </p>
      </div><!-- /.mt-lg-3 -->
 
@@ -227,7 +269,7 @@
       </div><!-- /.footer-up -->
 
       <div class="footer-down">
-        <p>© 2024 MIT Bitcoin Expo</p>
+        <p>© 2023 MIT Bitcoin Expo</p>
       </div><!-- /.footer-down -->
 
     </div><!-- /.container -->
