--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
               </li>
 
               <li class="nav-item">
-                <a href="https://www.eventbrite.com/e/mit-bitcoin-expo-2024-tickets-808745157537?aff=oddtdtcreator" target="_blank" class="apply-btn">
+                <a href="https://mit.zoom.us/j/91681427158" target="_blank" class="apply-btn">
                   <span> Buy Tickets</span>
                   <img src="assets/img/logo/arrow.svg" alt=arrow"">
                 </a>
@@ -138,7 +138,7 @@
         </h2>
         <p>
           If you have any questions, please feel free to reach out to:  <br>
-          <a href="mailto:wbm3@mit.edu"> Expo Director: wbm3@mit.edu </a>
+          <a href="mailto:mitbtc-expo@mit.edu"> mitbtc-expo@mit.edu </a>
         </p>
       </div><!-- /.sec-t -->
 
@@ -149,7 +149,7 @@
 
 
       <div class="map-btns">
-        <a href="mailto:wbm3@mit.edu" target="_blank" class="btn-solid">
+        <a href="https://mit.zoom.us/j/91681427158" target="_blank" class="btn-solid">
           <span> Inquire to sponsor </span>
           <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M1.79565 7.94437H14.7587M14.7587 7.94437L8.27711 14.4259M14.7587 7.94437L8.27711 1.46289"
@@ -225,7 +225,7 @@
       </div><!-- /.footer-up -->
 
       <div class="footer-down">
-        <p>© 2024 MIT Bitcoin Expo</p>
+        <p>© 2023 MIT Bitcoin Expo</p>
       </div><!-- /.footer-down -->
 
     </div><!-- /.container -->
