--- a/team.html
+++ b/team.html
@@ -92,7 +92,7 @@
               </li>
 
               <li class="nav-item">
-                <a href="https://www.eventbrite.com/e/mit-bitcoin-expo-2024-tickets-808745157537?aff=oddtdtcreator" target="_blank" class="apply-btn">
+                <a href="https://mit.zoom.us/j/91681427158" target="_blank" class="apply-btn">
                   <span> Buy Tickets</span>
                   <img src="assets/img/logo/arrow.svg" alt=arrow"">
                 </a>
@@ -410,7 +410,7 @@
       </div><!-- /.footer-up -->
 
       <div class="footer-down">
-        <p>© 2024 MIT Bitcoin Expo</p>
+        <p>© 2023 MIT Bitcoin Expo</p>
       </div><!-- /.footer-down -->
 
     </div><!-- /.container -->
