--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               </li>
 
               <li class="nav-item">
-                <a href="https://mit.zoom.us/j/91681427158" target="_blank" class="apply-btn">
+                <a href="https://www.eventbrite.com/e/mit-bitcoin-expo-2024-tickets-808745157537" target="_blank" class="apply-btn">
                   <span> Buy Tickets</span>
                   <img src="assets/img/logo/arrow.svg" alt=arrow"">
                 </a>
@@ -139,7 +139,7 @@
 
 
         <div class="hero-btns">
-          <a href="#" class="btn-solid">
+          <a href="https://www.eventbrite.com/e/mit-bitcoin-expo-2024-tickets-808745157537" target="_blank" class="btn-solid">
             <span> Buy Tickets </span>
             <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M1.79565 7.94437H14.7587M14.7587 7.94437L8.27711 14.4259M14.7587 7.94437L8.27711 1.46289"
