--- a/team.html
+++ b/team.html
@@ -92,7 +92,7 @@
               </li>
 
               <li class="nav-item">
-                <a href="https://mit.zoom.us/j/91681427158" target="_blank" class="apply-btn">
+                <a href="https://www.eventbrite.com/e/mit-bitcoin-expo-2024-tickets-808745157537" target="_blank" class="apply-btn">
                   <span> Buy Tickets</span>
                   <img src="assets/img/logo/arrow.svg" alt=arrow"">
                 </a>
