--- a/speakers.html
+++ b/speakers.html
@@ -126,15 +126,155 @@
         <h1> Speakers </h1>
       </div><!-- /.page-title -->
 
-      <div class="spr-btns mt-lg-5 mt-4">
-       <h5 class="cming">Coming Soon...</h5>
-      </div><!-- /.spr-btns -->
+    
 
     </div><!-- /.container -->
   </section><!-- /.page-header -->
 
   <section class="speakers">
-   
+    <div class="container">
+     
+
+      <div class="row g-lg-5 gy-4 justify-content-center row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1">
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/leah-wald.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Leah Wald </h5>
+              <p>
+                CEO, Valkyrie Investments
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/adam.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Adam Jonas </h5>
+              <p>
+                CEO, Chaincode Labs
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/alex.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5>Alexander Leishman </h5>
+              <p>
+                CEO & CTO, River
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/hong.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Hong Kim </h5>
+              <p>
+                cofounder & CTO at 
+                Bitwise Asset Management
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/tadge.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Tadge Dryja </h5>
+              <p>
+                Research at Lightspark
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/steven.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Steven Roose </h5>
+              <p>
+                Developer at Ark
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/murch.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Murch </h5>
+              <p>
+                Engineer, Chaincode Labs
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/amn.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5>ZmnSCPxj </h5>
+              <p>
+                Senior Blockchain Engineer - C=
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/carla.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5>Carla Kirk-Cohent </h5>
+              <p>
+                Software Engineer, Chaincode Labs
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/nic.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Nic Carter </h5>
+              <p>
+                General Partner
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/ishaana.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Ishaana Misra </h5>
+              <p>
+                Student- Stuyvesant High School
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+      </div><!-- /.row -->
+
+
+
+    </div><!-- /.container -->
   </section><!-- /.speakers -->
 
 
