--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/swiper/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="assets/css/main.css?v=1954" />
+  <link rel="stylesheet" href="assets/css/main.css?v=764" />
 
 </head>
 
@@ -200,8 +200,154 @@
         <h2> Speakers </h2>
       </div><!-- /.sec-t -->
 
-      <h5>Coming Soon...</h5>
+      <div class="row g-lg-5 gy-4 justify-content-center row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1">
 
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/leah-wald.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Leah Wald </h5>
+              <p>
+                CEO, Valkyrie Investments
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/adam.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Adam Jonas </h5>
+              <p>
+                CEO, Chaincode Labs
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/alex.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5>Alexander Leishman </h5>
+              <p>
+                CEO & CTO, River
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/hong.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Hong Kim </h5>
+              <p>
+                cofounder & CTO at 
+                Bitwise Asset Management
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/tadge.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Tadge Dryja </h5>
+              <p>
+                Research at Lightspark
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/steven.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Steven Roose </h5>
+              <p>
+                Developer at Ark
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/murch.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Murch </h5>
+              <p>
+                Engineer, Chaincode Labs
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/amn.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5>ZmnSCPxj </h5>
+              <p>
+                Senior Blockchain Engineer - C=
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/carla.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5>Carla Kirk-Cohent </h5>
+              <p>
+                Software Engineer, Chaincode Labs
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/nic.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Nic Carter </h5>
+              <p>
+                General Partner
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/ishaana.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Ishaana Misra </h5>
+              <p>
+                Student- Stuyvesant High School
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+      </div><!-- /.row -->
+
+      <div class="sp-btns">
+        <a href="#" class="btn-solid">
+          <span> View All speakers </span>
+          <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1.79565 7.94437H14.7587M14.7587 7.94437L8.27711 14.4259M14.7587 7.94437L8.27711 1.46289"
+              stroke="#" stroke-width="1.66667" stroke-linecap="square" />
+          </svg>
+        </a>
+
+      
+      </div><!-- /.sp-btns -->
 
     </div><!-- /.container -->
   </section><!-- /.speakers -->
