--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         collegiate conference focused on blockchain. This year, we spotlight Bitcoin's evolution and potential amidst
         globalization, regulation, and big tech. Attendees will delve into key topics like ETF approvals, regulatory
         clarity, and consumer applications, essential for Bitcoin's mainstream adoption. Our technical sessions will
-        feature innovations such as the Taproot upgrade and Layer 2 scalability, further enhancing Bitcoin's
+        feature innovations such as the Taproot upgrade, Convenant, and Layer 2 scalability, further enhancing Bitcoin's
         functionality. Embracing a variety of projects and ideas, from AI to Web3, this year's expo offers a
         comprehensive view of Bitcoin's significant role in our rapidly evolving digital era. We can’t wait for you to
         join us!
