updated people again

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </svg>
           </a>
 
-          <a href="#" class="btn-outline">
+          <a href="about.html" class="btn-outline">
             <span> Learn More </span>
             <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M1.79565 7.94437H14.7587M14.7587 7.94437L8.27711 14.4259M14.7587 7.94437L8.27711 1.46289"
@@ -204,11 +204,36 @@
 
         <div class="col-10">
           <div class="team-single">
+            <img src="assets/img/speakers/hong.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Hong Kim </h5>
+              <p>
+                Co-Founder & CTO,
+                Bitwise Asset Management
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
             <img src="assets/img/speakers/leah-wald.png" class="w-100" alt="team-img">
             <div class="team-info">
               <h5> Leah Wald </h5>
               <p>
                 CEO, Valkyrie Investments
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/Neha+pic.jpg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Neha Narula </h5>
+              <p>
+                Director, MIT Digital Currency Initiative
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -240,12 +265,11 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/speakers/hong.png" class="w-100" alt="team-img">
+            <img src="assets/img/speakers/nic.png" class="w-100" alt="team-img">
             <div class="team-info">
-              <h5> Hong Kim </h5>
+              <h5> Nic Carter </h5>
               <p>
-                cofounder & CTO at 
-                Bitwise Asset Management
+                General Partner, Castle Island Ventures
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -257,7 +281,7 @@
             <div class="team-info">
               <h5> Tadge Dryja </h5>
               <p>
-                Research at Lightspark
+                Researcher, Lightspark
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -269,7 +293,19 @@
             <div class="team-info">
               <h5> Steven Roose </h5>
               <p>
-                Developer at Ark
+                Developer, Ark
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/bob.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Robert Bench </h5>
+              <p>
+                 Senior Advisor, MIT Digital Currency Initiative
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -289,47 +325,23 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/speakers/amn.png" class="w-100" alt="team-img">
-            <div class="team-info">
-              <h5>ZmnSCPxj </h5>
-              <p>
-                Senior Blockchain Engineer - C=
-              </p>
-            </div><!-- /.team-info -->
-          </div><!-- /.team-single -->
-        </div><!-- /.col-lg -->
-
-        <div class="col-10">
-          <div class="team-single">
-            <img src="assets/img/speakers/carla.png" class="w-100" alt="team-img">
-            <div class="team-info">
-              <h5>Carla Kirk-Cohent </h5>
-              <p>
-                Software Engineer, Chaincode Labs
-              </p>
-            </div><!-- /.team-info -->
-          </div><!-- /.team-single -->
-        </div><!-- /.col-lg -->
-
-        <div class="col-10">
-          <div class="team-single">
-            <img src="assets/img/speakers/nic.png" class="w-100" alt="team-img">
-            <div class="team-info">
-              <h5> Nic Carter </h5>
-              <p>
-                General Partner
-              </p>
-            </div><!-- /.team-info -->
-          </div><!-- /.team-single -->
-        </div><!-- /.col-lg -->
-
-        <div class="col-10">
-          <div class="team-single">
             <img src="assets/img/speakers/ishaana.png" class="w-100" alt="team-img">
             <div class="team-info">
               <h5> Ishaana Misra </h5>
               <p>
-                Student- Stuyvesant High School
+                High School Student & Bitcoin Core Developer, Stuyvesant High School
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/jeremy+rubin.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Jeremy Rubin </h5>
+              <p>
+                Bitcoin Core Developer
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -338,7 +350,7 @@
       </div><!-- /.row -->
 
       <div class="sp-btns">
-        <a href="#" class="btn-solid">
+        <a href="speakers.html" class="btn-solid">
           <span> View All speakers </span>
           <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M1.79565 7.94437H14.7587M14.7587 7.94437L8.27711 14.4259M14.7587 7.94437L8.27711 1.46289"
@@ -378,7 +390,7 @@
             <div class="gc-wrapper">
               <h4> Technical Improvements </h4>
               <p>
-                Taproot, Layer 2 Scalability, and more.
+                Covenant, Taproot, Layer 2 Scalability, and more.
               </p>
 
             </div><!-- /.gc-wrapper -->
@@ -499,7 +511,7 @@
       </div><!-- /.footer-up -->
 
       <div class="footer-down">
-        <p>© 2023 MIT Bitcoin Expo</p>
+        <p>© 2024 MIT Bitcoin Expo</p>
       </div><!-- /.footer-down -->
 
     </div><!-- /.container -->
