--- a/speakers.html
+++ b/speakers.html
@@ -139,11 +139,36 @@
 
         <div class="col-10">
           <div class="team-single">
+            <img src="assets/img/speakers/hong.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Hong Kim </h5>
+              <p>
+                Co-Founder & CTO,
+                Bitwise Asset Management
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
             <img src="assets/img/speakers/leah-wald.png" class="w-100" alt="team-img">
             <div class="team-info">
               <h5> Leah Wald </h5>
               <p>
                 CEO, Valkyrie Investments
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/Neha+pic.jpg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Neha Narula </h5>
+              <p>
+                Director, MIT Digital Currency Initiative
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -175,12 +200,11 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/speakers/hong.png" class="w-100" alt="team-img">
+            <img src="assets/img/speakers/nic.png" class="w-100" alt="team-img">
             <div class="team-info">
-              <h5> Hong Kim </h5>
+              <h5> Nic Carter </h5>
               <p>
-                cofounder & CTO at 
-                Bitwise Asset Management
+                General Partner, Castle Island Ventures
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -192,7 +216,7 @@
             <div class="team-info">
               <h5> Tadge Dryja </h5>
               <p>
-                Research at Lightspark
+                Researcher, Lightspark
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -204,7 +228,19 @@
             <div class="team-info">
               <h5> Steven Roose </h5>
               <p>
-                Developer at Ark
+                Developer, Ark
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/bob.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Robert Bench </h5>
+              <p>
+                 Senior Advisor, MIT Digital Currency Initiative
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -224,11 +260,37 @@
 
         <div class="col-10">
           <div class="team-single">
+            <img src="assets/img/speakers/ishaana.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Ishaana Misra </h5>
+              <p>
+                High School Student & Bitcoin Core Developer, Stuyvesant High School
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/jeremy+rubin.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Jeremy Rubin </h5>
+              <p>
+                Bitcoin Core Developer
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <!-- Other -->
+
+        <div class="col-10">
+          <div class="team-single">
             <img src="assets/img/speakers/amn.png" class="w-100" alt="team-img">
             <div class="team-info">
               <h5>ZmnSCPxj </h5>
               <p>
-                Senior Blockchain Engineer - C=
+                Senior Blockchain Engineer, C=
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -248,11 +310,11 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/speakers/nic.png" class="w-100" alt="team-img">
+            <img src="assets/img/speakers/anders.jpeg" class="w-100" alt="team-img">
             <div class="team-info">
-              <h5> Nic Carter </h5>
+              <h5> Anders Brownworth </h5>
               <p>
-                General Partner
+                Lecturer & Applied Researcher, MIT Digital Currency Initiative
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -260,15 +322,41 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/speakers/ishaana.png" class="w-100" alt="team-img">
+            <img src="assets/img/speakers/madars.jpg" class="w-100" alt="team-img">
             <div class="team-info">
-              <h5> Ishaana Misra </h5>
+              <h5> Madars Virza </h5>
               <p>
-                Student- Stuyvesant High School
+                Research Scientist, MIT Digital Currency Initiative
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
         </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/michael.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Micahel Maurer </h5>
+              <p>
+                Student & CBDC Software Engineer, MIT Digital Currency Initiative
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/sam-stuewe.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Sam Stuewe </h5>
+              <p>
+                CBDC Software Engineer, MIT Digital Currency Initiative
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+
 
       </div><!-- /.row -->
 
@@ -338,7 +426,7 @@
       </div><!-- /.footer-up -->
 
       <div class="footer-down">
-        <p>© 2023 MIT Bitcoin Expo</p>
+        <p>© 2024 MIT Bitcoin Expo</p>
       </div><!-- /.footer-down -->
 
     </div><!-- /.container -->
