--- a/team.html
+++ b/team.html
@@ -136,11 +136,11 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/team/thomaz.png" class="w-100" alt="team-img">
+            <img src="assets/img/team/willie_mcclinton.png" class="w-100" alt="team-img">
             <div class="team-info">
-              <h5>Thomaz do Nascimento </h5>
+              <h5> Willie McClinton </h5>
               <p>
-                Hackathon co-chair
+                Director
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -151,6 +151,18 @@
             <img src="assets/img/team/henry.png" class="w-100" alt="team-img">
             <div class="team-info">
               <h5> Henry Suzuki </h5>
+              <p>
+                Sponsorship
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/team/tommy.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Thomas (Tommy) Cui </h5>
               <p>
                 Sponsorship
               </p>
@@ -172,11 +184,11 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/team/willie_mcclinton.png" class="w-100" alt="team-img">
+            <img src="assets/img/team/manish.webp" class="w-100" alt="team-img">
             <div class="team-info">
-              <h5> Willie McClinton </h5>
+              <h5> Manish Kumar </h5>
               <p>
-                Director
+                Content
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -224,7 +236,19 @@
             <div class="team-info">
               <h5> Hannah Shen </h5>
               <p>
-                Secretariat
+                Partnerships
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/team/thomaz.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5>Thomaz do Nascimento </h5>
+              <p>
+                Hackathon
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -306,7 +330,7 @@
       </div><!-- /.footer-up -->
 
       <div class="footer-down">
-        <p>© 2023 MIT Bitcoin Expo</p>
+        <p>© 2024 MIT Bitcoin Expo</p>
       </div><!-- /.footer-down -->
 
     </div><!-- /.container -->
