--- a/speakers.html
+++ b/speakers.html
@@ -358,6 +358,18 @@
           </div><!-- /.team-single -->
         </div><!-- /.col-lg -->
 
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/satoshi.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Satoshi Nakamoto </h5>
+              <p>
+                *Creator of Bitcoin
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
 
 
       </div><!-- /.row -->
@@ -372,6 +384,9 @@
 
   <footer class="footer-sec">
     <div class="container">
+      <div class="spr-btns mt-lg-5 mt-4">
+        <h5 class="cming"> * Disclaimer: Satoshi Nakamoto may or may not be at the event - identity remains still unknown. The picture may or may not be accurate and is solely for comedic effect. As far as we know, the man in the photo will not be attending the event. </h5>
+       </div><!-- /.spr-btns -->
       <div class="footer-up">
         <div class="row justify-content-between gx-0 gy-4 align-items-center">
           <div class="col-lg-3">
@@ -387,6 +402,7 @@
             </div><!-- /.footer-logo -->
 
           </div><!-- /.col-lg-4 -->
+
           <div class="col-lg-5">
             <ul class="footer-links">
               <li>
