--- a/speakers.html
+++ b/speakers.html
@@ -214,6 +214,18 @@
 
         <div class="col-10">
           <div class="team-single">
+            <img src="assets/img/speakers/john.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> John D'Agostino </h5>
+              <p>
+                Lead of Institutional Strategy, Coinbase
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
             <img src="assets/img/speakers/tadge.png" class="w-100" alt="team-img">
             <div class="team-info">
               <h5> Tadge Dryja </h5>
@@ -250,18 +262,6 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/speakers/murch.png" class="w-100" alt="team-img">
-            <div class="team-info">
-              <h5> Murch </h5>
-              <p>
-                Engineer, Chaincode Labs
-              </p>
-            </div><!-- /.team-info -->
-          </div><!-- /.team-single -->
-        </div><!-- /.col-lg -->
-
-        <div class="col-10">
-          <div class="team-single">
             <img src="assets/img/speakers/ishaana.png" class="w-100" alt="team-img">
             <div class="team-info">
               <h5> Ishaana Misra </h5>
@@ -285,6 +285,18 @@
         </div><!-- /.col-lg -->
 
         <!-- Other -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/murch.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Murch </h5>
+              <p>
+                Engineer, Chaincode Labs
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
 
         <div class="col-10">
           <div class="team-single">
