--- a/index.html
+++ b/index.html
@@ -277,6 +277,18 @@
 
         <div class="col-10">
           <div class="team-single">
+            <img src="assets/img/speakers/john.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> John D'Agostino </h5>
+              <p>
+                Lead of Institutional Strategy, Coinbase
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
             <img src="assets/img/speakers/tadge.png" class="w-100" alt="team-img">
             <div class="team-info">
               <h5> Tadge Dryja </h5>
@@ -306,18 +318,6 @@
               <h5> Robert Bench </h5>
               <p>
                  Senior Advisor, MIT Digital Currency Initiative
-              </p>
-            </div><!-- /.team-info -->
-          </div><!-- /.team-single -->
-        </div><!-- /.col-lg -->
-
-        <div class="col-10">
-          <div class="team-single">
-            <img src="assets/img/speakers/murch.png" class="w-100" alt="team-img">
-            <div class="team-info">
-              <h5> Murch </h5>
-              <p>
-                Engineer, Chaincode Labs
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
